Updated the project
- Updated the maven structure
- Added Java 8 support that now causes concurency issues, therefore this
  project is not going to be continued
- Cleaning and refactoring

--- a/statefulj-framework/statefulj-framework-binders/statefulj-framework-binders-jersey/pom.xml
+++ b/statefulj-framework/statefulj-framework-binders/statefulj-framework-binders-jersey/pom.xml
@@ -11,11 +11,6 @@
 		<version>2.0.0</version>
 	</parent>
 
-	<properties>
-		<jax-rs.version>0.11</jax-rs.version>
-		<jersey.version>2.13</jersey.version>
-	</properties>
-
 	<dependencies>
 
 		<!-- Dependencies -->
@@ -24,21 +19,18 @@
 			<artifactId>servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>${jax-rs.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>${jersey.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.statefulj.framework</groupId>
 			<artifactId>statefulj-framework-binders-common</artifactId>
@@ -67,15 +59,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 </project>
