--- a/pom.xml
+++ b/pom.xml
@@ -10,33 +10,47 @@
 
 	<properties>
 		<!-- Java -->
-		<version.java>1.8</version.java>
+		<java>1.8</java>
 
 		<!-- Project -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Maven Plugins -->
-		<version.maven.clean.plugin>3.0.0</version.maven.clean.plugin>
-		<version.maven.compiler.plugin>3.5.1</version.maven.compiler.plugin>
-		<version.maven.dependency.plugin>2.10</version.maven.dependency.plugin>
-		<version.maven.jar.plugin>2.6</version.maven.jar.plugin>
-		<version.maven.assembly.plugin>2.6</version.maven.assembly.plugin>
-		<version.maven.surefire.plugin>2.19.1</version.maven.surefire.plugin>
-		<version.maven.source.plugin>3.0.0</version.maven.source.plugin>
-		<version.maven.javadoc.plugin>2.10.3</version.maven.javadoc.plugin>
+		<maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
+		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
+		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
+		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
+		<maven.assembly.plugin.version>2.6</maven.assembly.plugin.version>
+		<maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+		<maven.source.plugin.version>3.0.0</maven.source.plugin.version>
+		<maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
+		<maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
 
 		<!-- Logging -->
-		<version.slf4j>1.7.21</version.slf4j>
-		<version.log4j>2.5</version.log4j>
+		<slf4j.version>1.7.21</slf4j.version>
+		<log4j.version>2.5</log4j.version>
 
 		<!-- Test -->
-		<version.junit>4.12</version.junit>
-		<mockito.version>1.9.5</mockito.version>
+		<junit.version>4.12</junit.version>
+		<mockito.version>2.0.54-beta</mockito.version>
 
 		<!-- Dependencies -->
 		<statefulj.version>${project.version}</statefulj.version>
-		<apache.commons.version>3.3.2</apache.commons.version>
+		<apache.commons.version>3.4</apache.commons.version>
+		<hibernate.version>5.1.0.Final</hibernate.version>
+		<javax.api.version>1.2</javax.api.version>
+		<hsqldb.version>2.3.4</hsqldb.version>
+		<spring.version>4.2.6.RELEASE</spring.version>
+		<spring.data.version>1.10.1.RELEASE</spring.data.version>
+		<spring.data.commons.version>1.12.1.RELEASE</spring.data.commons.version>
+		<jersey.version>2.23</jersey.version>
+		<jax-rs.version>1.1.1</jax-rs.version>
+		<reflections.version>0.9.10</reflections.version>
+		<javaassist.version>3.20.0-GA</javaassist.version>
+		<servlet.version>2.5</servlet.version>
+        <javaee.web.api.version>7.0</javaee.web.api.version>
+        <camel.version>2.17.1</camel.version>
 	</properties>
 
 	<dependencyManagement>
@@ -52,29 +66,29 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>${version.slf4j}</version>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
-				<version>${version.log4j}</version>
+				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
-				<version>${version.log4j}</version>
+				<version>${log4j.version}</version>
 			</dependency>
 
 			<!-- Testing -->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>${version.junit}</version>
+				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
+				<artifactId>mockito-core</artifactId>
 				<version>${mockito.version}</version>
 				<scope>test</scope>
 			</dependency>
@@ -93,10 +107,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${version.maven.compiler.plugin}</version>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
+					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -109,7 +130,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>${version.maven.source.plugin}</version>
+						<version>${maven.source.plugin.version}</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -122,7 +143,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>{$version.maven.javadoc.plugin}</version>
+						<version>${maven.javadoc.plugin.version}</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -136,20 +157,9 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.3</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
+						<version>${maven.gpg.plugin.version}</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
