--- a/statefulj-framework/statefulj-framework-core/pom.xml
+++ b/statefulj-framework/statefulj-framework-core/pom.xml
@@ -11,28 +11,19 @@
 		<version>2.0.0</version>
 	</parent>
 
-    <properties>
-		<reflections.version>0.9.9-RC1</reflections.version>
-		<javaassist.version>3.18.2-GA</javaassist.version>
-		<spring.data.commons.version>1.9.1.RELEASE</spring.data.commons.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.statefulj</groupId>
 			<artifactId>statefulj-fsm</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.statefulj</groupId>
 			<artifactId>statefulj-common</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
@@ -44,13 +35,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>${javaassist.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
@@ -66,7 +55,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -94,9 +82,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 </project>
