--- a/statefulj-framework/statefulj-framework-persistence/statefulj-framework-persistence-jpa/pom.xml
+++ b/statefulj-framework/statefulj-framework-persistence/statefulj-framework-persistence-jpa/pom.xml
@@ -11,16 +11,11 @@
 		<version>2.0.0</version>
 	</parent>
 
-    <properties>
-		<hsqldb.version>1.8.0.10</hsqldb.version>
-	</properties>
-
 	<dependencies>
 	       <dependency>
             <groupId>org.statefulj.framework</groupId>
             <artifactId>statefulj-framework-core</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.statefulj.persistence</groupId>
             <artifactId>statefulj-persistence-jpa</artifactId>
@@ -49,11 +44,11 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>${hsqldb.version}</version>
 			<scope>test</scope>
