--- a/statefulj-framework/statefulj-framework-tests/pom.xml
+++ b/statefulj-framework/statefulj-framework-tests/pom.xml
@@ -10,46 +10,7 @@
         <version>2.0.0</version>
     </parent>
 
-    <properties>
-		<jersey.version>2.13</jersey.version>
-	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.statefulj.framework</groupId>
-			<artifactId>statefulj-framework-binders-springmvc</artifactId>
-			<version>${statefulj.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.statefulj.framework</groupId>
-			<artifactId>statefulj-framework-binders-camel</artifactId>
-			<version>${statefulj.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.statefulj.framework</groupId>
-			<artifactId>statefulj-framework-binders-jersey</artifactId>
-			<version>${statefulj.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.statefulj.framework</groupId>
-			<artifactId>statefulj-framework-persistence-jpa</artifactId>
-			<version>${statefulj.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Jersey -->
-		<dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-servlet</artifactId>
-			<version>${jersey.version}</version>
-			<scope>test</scope>
-		</dependency>
 
 		<!-- Logging -->
 		<dependency>
@@ -73,13 +34,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>${hsqldb.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -92,5 +53,35 @@
 			<artifactId>servlet-api</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.statefulj.framework</groupId>
+            <artifactId>statefulj-framework-binders-springmvc</artifactId>
+            <version>${statefulj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.statefulj.framework</groupId>
+            <artifactId>statefulj-framework-binders-camel</artifactId>
+            <version>${statefulj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.statefulj.framework</groupId>
+            <artifactId>statefulj-framework-binders-jersey</artifactId>
+            <version>${statefulj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.statefulj.framework</groupId>
+            <artifactId>statefulj-framework-persistence-jpa</artifactId>
+            <version>${statefulj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>${jersey.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
