--- a/statefulj-fsm/pom.xml
+++ b/statefulj-fsm/pom.xml
@@ -17,7 +17,6 @@
 			<artifactId>statefulj-common</artifactId>
 			<version>${statefulj.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -46,7 +45,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
