--- a/statefulj-persistence/statefulj-persistence-common/pom.xml
+++ b/statefulj-persistence/statefulj-persistence-common/pom.xml
@@ -17,7 +17,6 @@
 			<groupId>org.statefulj</groupId>
 			<artifactId>statefulj-fsm</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.statefulj</groupId>
 			<artifactId>statefulj-common</artifactId>
@@ -45,7 +44,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 
